# tree-sitter-mcfuncx

./: .gitignore  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  biome.json  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py
bindings/c/: tree-sitter-mcfuncx.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_mcfuncx/: __init__.py  binding.c
bindings/rust/: lib.rs
bindings/swift/TreeSitterMcfuncx/: mcfuncx.h
examples/: unite.mcfunction
src/: grammar.json  node-types.json  parser.c
test/corpus/: basic_types.txt  chained_command.txt  identifier.txt  json.txt  macro.txt  nbt.txt  object_like_keys.txt  object_like_nest.txt  object_like_values.txt  operator.txt
